--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
             make unittest
   test_pypy:
     docker:
-      - image: jamiehewland/alpine-pypy:3.5-7-alpine3.9
+      - image: circleci/pypy:4.0.1
     working_directory: ~/project
     steps:
       - checkout
